--- a/style/style.css
+++ b/style/style.css
@@ -11,9 +11,6 @@ body{
 	padding-right: 0;
 	padding-left: 0;
 }
-.row{
-	margin: 0;
-}
 
 .a{
 font-family: 'Montserrat', sans-serif;
@@ -48,25 +45,29 @@ font-family: 'Roboto Condensed', sans-serif;}
 	font-family: 'Montserrat', sans-serif;
 	font-weight: bold;
 }
-.top-nav__link{
+.link{
 	font-size: 14px;
 	font-family: 'Montserrat', sans-serif;
 	text-transform: uppercase;
 	color: #fff;
 }
-.top-nav__link--mrg{
+.top-nav__link{
 		margin: 3% 0% 0 10%;
 }
 .top-nav__items{
 	display: flex;
 	flex-flow: row nowrap;
-}
+}/*tttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt*/
 .inscr{
 	text-align: center;
-	padding: 2.5% 0 5% 0;
+	padding-top: 5%;
 }
-.page{
-	padding-bottom: 7%;
+.inscr .line--red{
+	margin-bottom: 3%;
+}
+.inscr--pad{
+	text-align: center;
+	padding: 2.5% 0 5% 0;
 }
 .insc__item--font--kaush{
 	font-family: 'Kaushan Script', cursive;
@@ -76,11 +77,15 @@ font-family: 'Roboto Condensed', sans-serif;}
 	font-size: 125px;
 	font-weight: bold;
 }
-.inscr__line{
+.line{
 	background-color: #fff;
 	height: 3px;
-	width: 6%;
+	width: 50px;
 	display: inline-block;
+}
+.line--red{
+	background-color: red;
+	margin:2% 3%;
 }
 .inscr__button{
 	display: inline-block;
@@ -100,6 +105,15 @@ font-family: 'Roboto Condensed', sans-serif;}
 .line__block{
 	padding-top: 5%;
 }
+.article{
+	padding-top: 5% ;
+}
+.mrgbtm{
+	margin-bottom: 3%;
+}
+.page{
+	padding-bottom: 7%;
+}
 .line__num {
 	font: bold 16px 'Montserrat', sans-serif;
 }
@@ -112,26 +126,20 @@ font-family: 'Roboto Condensed', sans-serif;}
 	font-weight: bold;
 	margin-top: 0;
 }
-.article__line--red{
-	background-color: red;
-	margin:2% 3%;
-}
 .article__p{
 	font: 15px 'Roboto Condensed', sans-serif;
 	color:#999999;
 	margin-bottom: 4%;
+	line-height: 26px;
 }
 .pic{
 	margin:4% 0% 8% 0; 
 }
 .pic__itself{
-	/*max-height: 100%;
-	height: 220px;*/
-	width: 350px;
+	width: 320px;
 	background: url(../img/gradient.png);
 	background-position: center;
 }
-
 .bluebox{
 	background-color: RGB(149, 225 , 211);
 }
@@ -140,8 +148,8 @@ font-family: 'Roboto Condensed', sans-serif;}
 	border: 1px solid rgba(255, 255 , 255,.3);
 	text-align: center;
 }
-.numbox:not(:first-child){
-	padding: 2.9%;
+.numbox:first-child{
+	padding-bottom:  0.2%;
 }
 .numbox__num{
 	font-size: 60px;
@@ -174,13 +182,130 @@ font-family: 'Roboto Condensed', sans-serif;}
 	padding-bottom: 0;
 }
 .phone__itself{
-	margin-top: 6%;
-	margin-bottom: -30%;
+	margin-top: 5%;
 	padding-bottom: 0;
+	width: 67%;
 }
 .phone__smphone{
 	margin-top: -30%;
 	margin-left: 57%;
+	position: absolute;
+	top: 75%;
+	right: 13%;
+	width: 36%;
+}
+.openblock__link{
+	font-weight: 900;
+	color: #000;
+}
+.openblock{	
+	padding: 2%;
+	border: 1px solid rgba(000, 000 , 000,.2);
+	width: 100%;
+}
+.fa{
+	color:  RGB(149, 225 , 211);
+}
+.grayblock{
+	background: RGB(248, 248 , 248);
+	margin-top: 5%;
+	padding: 3% 0;
+}
+.grayblock__p{
+	font-weight: italic 22px 'Roboto Condensed', sans-serif;
+	color:#999999;
+}
+.fa-comments-o{
+	border:4px solid RGB(149, 225 , 211);
+	padding: 10px;
+	margin-left: 35%;
+}
+.grayblock__arrow .fa{
+	color: RGB(221, 221 , 221);
+	padding-top: 80%;
+	
+}
+.grayblock__arrow{
+	box-sizing: border-box;
+}
+.men{
+	margin: 5% 0;
+}
+.men__img{
+	width: 100%;
+}
+.brand-box__img{
+	max-width: 100%;
+}
+.gallery__img{
+	height: 10%;
+}
+.hmm:first-child{
+	width: 100%;
+}
+.grayblock--white{
+	background-color: #fff;
+}
+.coment__img{
+	height: 100px;
+	margin-left: 30%
+}
+.gallery{
+	margin-top:2%;
+}
+.mountin{
+	background: url(../img/bg.jpg);
+	padding-bottom: 5%;
+}
+.coment__p{
+	font-style: italic;
+	margin: 1% 0;
+}
+.coment p:first-child{
+	margin-bottom: 0.5;
+}
+.coment img{
+	padding-left: 20%;
+}
+.link--black{
+	color: black;
+	font-weight: bold;
+}
+
+.coment .line--red{
+	margin-left: 0;
+}
+.sc{
+	margin-bottom: 5%;
+}
+.sc__img{
+	width: 90%;
+}
+.map{
+	background: url(../img/fon.jpg);
+	padding: 2% 0;
+	text-align: center;
+}
+.map__items{
+	color: RGB(243, 129 , 129);
+}
+.map .inscr__line{
+	width: 40%;
+	background-color: RGB(243, 129 , 129);
+}
+.soc i{
+	padding: 3px;
+}
+.blog__p{
+	font-size: 12px;
+	line-height: 18px;
+	margin: 0;
+}
+.blog__item .article__p{
+	font-size: 12px;
+}
+.foot__label{
+	color: #cccccc;
 }
 
 
@@ -203,7 +328,7 @@ font-family: 'Roboto Condensed', sans-serif;}
 	border: 2px solid #000;
 }
 .my div:nth-child(2n){
-	border: 9px double blue;
+	border: 1px double blue;
 }
 .myy{
 	padding-top: 100px;
