--- a/style/style.css
+++ b/style/style.css
@@ -44,6 +44,7 @@ font-family: 'Roboto Condensed', sans-serif;}
 	font-size: 30px;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: bold;
+	color: #fff;
 }
 .link{
 	font-size: 14px;
