--- a/style/style.css
+++ b/style/style.css
@@ -21,9 +21,10 @@ font-family: 'Roboto Condensed', sans-serif;}
 	float: right;
 }
 .section{
-	height: 800px;
+	
 	max-height: 100%; 
 	padding-top: 2%;
+	padding-bottom: 100px;
 	background-size: 100%;
 	background-attachment: relative;
 	background-position: center center;
@@ -34,7 +35,6 @@ font-family: 'Roboto Condensed', sans-serif;}
 	background: url(../img/banner.png) no-repeat center top;
 	color: #fff;
 	background-attachment: fixed;
-	padding-bottom: 20%;
 }
 
 .top-nav{
@@ -74,10 +74,10 @@ font-family: 'Roboto Condensed', sans-serif;}
 }
 .insc__item--font--kaush{
 	font-family: 'Kaushan Script', cursive;
-	font-size: 55px;
+	font-size: 3vw;
 }
 .insc__item--size--big{
-	font-size: 125px;
+	font-size: 15vh;
 	font-weight: bold;
 }
 .line{
@@ -224,6 +224,14 @@ font-family: 'Roboto Condensed', sans-serif;}
 	font-weight: italic 22px 'Roboto Condensed', sans-serif;
 	color:#999999;
 }
+.logo{
+	display: flex;
+	justify-content: space-around;
+	flex-flow: row wrap;
+}
+.logo__img{
+	max-width: 100%;
+}
 .fa-comments-o{
 	border:4px solid RGB(149, 225 , 211);
 	padding: 10px;
@@ -251,6 +259,99 @@ font-family: 'Roboto Condensed', sans-serif;}
 .men__img{
 	max-width: 100%;
 }
+
+
+.info__img {
+  position: relative;
+  font-size: 0;
+}
+
+.info__trans {
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #95e1d3;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: transform .3s;
+  transition-delay: .1s;
+}
+
+.info__img > img {
+  width: 100%;
+  transition: transform .3s;
+}
+
+.info__item:hover .info__img > img {
+  transform: translate(-5px,-5px);
+}
+
+.info__item:hover .info__trans {
+  transform: translate(5px,5px);
+}
+
+.info__item:hover .info__social {
+  transform: scale(1);
+}
+
+.info__caption {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.info__name,
+.info__subname {
+  display: block;
+}
+
+.info__social {
+  font-size: 16px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: url(../img/clearmen.png);
+  z-index: 3;
+  transform: scale(0);
+  transform-origin: 50% 50%; 
+  transition: transform .3s;
+  margin-top: -8px;
+  margin-left: -6.8px;
+
+}
+.info__social .fa{
+	color:RGB(243, 129 , 129);
+	padding: 4%;
+	background-color: RGB(252, 227 , 138);
+}
+.info__social .fa:hover{
+	color:#fff;
+	background-color: RGB(243, 129 , 129);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .brand-box__img{
 	max-width: 100%;
 }
