--- a/style/media.css
+++ b/style/media.css
@@ -9,13 +9,13 @@
 	.section--fon-eagle {padding-bottom: 0;}
 	.insc__item--size--big{font-size: 15vw;}
 	.insc__item--font--kaush{font-size: 10vw;}
-	.blog__img{width: 70%;}
+	.foot .row p{text-align: center;}
 	
 }
 
 @media (max-width: 950px){
 	.info__info{margin: 5% 0;}
-	.cz{width: 100vw}
+	.cz{width: 100vw;}
 }
 
 
@@ -65,9 +65,21 @@ a:hover, a:focus{
 .navbar-brand:hover{
 	color: white;
 }
-.navbar-nav> li> a{
-text-shadow: 0;
+.nav>li>a:focus, .nav>li>a:hover{
+	background-color: rgba(0,0,0,0);
+	text-shadow: none;
+	color:RGB(252, 227 , 138);
 }
-.row{
-	margin-right: 0;
+.hover-line{
+	width: 0%;
+	height:2px;
+	display: inline-block;
+	transition: all 0.5s ease;
+	margin-top: -15px;
+
+}
+.hover-line:hover, .hover-line:focus{
+	width: 100%;	height: 2px;
+	transition: all 0.5s ease;
+	background-color: RGB(252, 227 , 138);
 }
