--- a/style/hover.css
+++ b/style/hover.css
@@ -1,9 +1,53 @@
+.nav>li>a {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  position: relative;
+  overflow: hidden;
+}
+.nav>li>a:not(.fa):before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 100%;
+  bottom: 0;
+  background:RGB(252, 227 , 138);
+  height: 2px;
+  -webkit-transition-property: right;
+  transition-property: right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+  margin-bottom: 7px;
+}
+.nav>li>a:hover:before, .nav>li>a:focus:before, .nav>li>a:active:before {
+  right: 0;
+}
+.inscr__button--mrg {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+}
+.inscr__button--mrg:hover, .inscr__button--mrg:focus, .inscr__button--mrg:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
 
 .info__img {
   position: relative;
   font-size: 0;
 }
-
 .info__trans {
   display: inline-block;
   position: absolute;
@@ -38,11 +82,27 @@
   text-align: center;
   margin-top: 10px;
 }
-
 .info__name,
 .info__subname {
   display: block;
 }
+.pic__itself {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  overflow: hidden;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+.pic__itself:hover, .pic__itself:focus, .pic__itself:active {
+  background: url(../img/gradient.png);
+  color: white;
+}
+
 .pic__img{
   position: relative;
     font-size: 0;
@@ -55,19 +115,20 @@
   background: #95e1d3;
   top: 0;
   left: 0;
-  z-index: -1; opacity: 0.5;
-  transition: transform .5s;
+  z-index: -1;
+  transition:  opacity .5s;
   transition-delay: .2s;
+  opacity: 0;
 }
 .pic__img>img{
    width: 100%;
-    transition: transform .3s;
+    transition: opacity .3s;
 }
 .pic__item:hover .pic__img > img {
-  transform: translate(-5px,-5px);
+  opacity: 0.9;
 }
 .pic__item:hover .pic__trans {
-  transform: translate(5px,5px);
+  opacity: 0.9;
 }
 
 .pic__trans{
@@ -80,17 +141,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  width: 101%;
+  height: 101%;
+  opacity: 0;
+  z-index: 3;margin-top:-2px;
   background: url(../img/gradient.png);
-  opacity: 0.7;
-  z-index: 3;
-  transform: scale(0);
-  transform-origin: 50% 50%; 
-  transition: transform .3s;
-  position: absolute;
-  margin-top: -8px;
-  margin-left: -6.8px;
+  background-size: cover;
   transition-delay: .2s;
   
 }
