--- a/style/hover.css
+++ b/style/hover.css
@@ -160,8 +160,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  width: 101%;
+  height: 101%;
   background: url(../img/mangradient.png);
   z-index: 3;
   transform: scale(0);
@@ -227,4 +227,7 @@ height: 100%;
   flex:1;
   display: flex;
 
+}
+.panel-title i{
+  margin: 3px 7px 0 -1%;
 }
